--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -728,7 +728,7 @@ html, body{font-size: calc(100vw / 75);}
     height: 3.4rem;
     position: absolute;
     box-sizing: border-box;
-    left: -5.1rem;
+    left: -9.1rem;
     top: 5.3rem;
     z-index: 2;
 }
@@ -1867,9 +1867,9 @@ input[type="radio"]:checked + label span {
     padding: 3rem;
     text-align: center;
 }
-.baeg-left img{
+/* .baeg-left img{
     width: 36.4rem;
-}
+} */
 .baeg-right{
     display: block;
     vertical-align: top;
@@ -5859,49 +5859,3 @@ p.dib{display:inline-block !important;}
     padding: 0px 0 1.5rem 15.7rem !important;
 }
 
-/* 0703 */
-.contentbox{padding: 0;width: 100%;clear: both;}
-.bigImages{margin-bottom: 12.5px;}
-.big{width: 60rem;height: 60rem;}
-.small{ width:100px; height:100px;margin-right: 10px;}
-.smallImages{
-    clear: both;
-    margin: 0 auto;
-    width: 60rem;
-}
-.small{width: 7.5rem;height: 7.5rem;margin-right: 1.25rem;float: left;}
-.smallImages .small:last-child{margin-right:0;}
-.smallImages:after{content:'';clear: both;display: block;}
-
-.big-content{background-color: rgb(255 255 255 / 0%);box-shadow: none;border: none;text-align: center;width: 60rem;margin: 0 auto;}
-.big-content .modal-header{ min-height: 0; padding: 0; border: none;}
-.big-content .modal-header .conts{right: -70px;top: 0;}
-.big-content .modal-header .conts .close{ opacity: 1;}
-.big-content .modal-header .conts .close::before, .close::after{}
-.big-content .modal-header .conts .close::before, .close::after{}
-.big-content .modal-header .conts .close::after{}
-.big-content .modal-header .conts .close::before{ background: #fff;}
-
-.select-s2{}
-.select-s2 .selectpicker{}
-.select-s2 .bootstrap-select{}
-
-.hms-p{padding-top:10px;display: inline-block;padding-left: 10px;}
-.btn-4{
-    border: #e8e8e8 1px solid;
-    display: inline-block;
-    width: 28.8rem;
-    text-align: center;
-    height: 6.6rem;
-    font-size: 2.4rem;
-    color: #333333 !important;
-    font-weight: 600;
-    padding: 1.4rem;
-    margin-top: 1.6rem;
-}
-.big-content .modal-body{
-    width: 60rem;
-    margin: 0 auto;
-    float: left;
-    padding: 0;
-} 
