--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -257,11 +257,11 @@ function myWorkList(){
 			}
 			
 			//거래종료
-			if(result[i].dealSttsCd == "TC"){
+			if(result[i].dealSttsCd != "TP" && result[i].dealTypCd != null && result[i].dealTypCd != ""){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
-				html += '<div class="item-div-img sold-3">';
+				html += '<div class="item-div-img sold-3" style="cursor:pointer;">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '</div>';
@@ -301,8 +301,8 @@ function myWorkList(){
 			}
 
 			
-				if(result[i].dealTypCd == null){
-				
+			if(result[i].dealTypCd == null || result[i].dealTypCd == ""){
+			
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
 				html += '<div class="item-div-img reg">';
@@ -319,36 +319,36 @@ function myWorkList(){
 				html += '<div class="item-body">';
 				html += '<div>';
 				html += '<div class="uesr-s">';
-				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
- 			}else{
- 				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
- 			}
-				html += '</div>';
-				
-				
-				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
-				
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
-				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
-				html += '<p>'+ result[i].workMatrl +'</p>';
-				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
-				html += '</div>'
-				
-				html += '</div>';
-				
-				if(result[i].authSq == 2){
- 				html += '<div class="artist active"><span>Artist</span></div>';
- 			}
- 			if(result[i].authSq == 1){
- 				html += '<div class="artist"><span>Artist</span></div>';
- 			}
-				
-				html += '</div>';
-				html += '</div>';
-				html += '</div>';
-
+			if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
+				html += '<img src="resources/img/de/ues-icon.png"/>';
+			}else{
+				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
 			}
+			html += '</div>';
+			
+			
+			html += '<div class="text-s" style="padding-left:5px;text-align:left">';
+			
+			html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+			html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
+			html += '<p>'+ result[i].workMatrl +'</p>';
+			html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
+			html += '</div>'
+			
+			html += '</div>';
+			
+			if(result[i].authSq == 2){
+				html += '<div class="artist active"><span>Artist</span></div>';
+			}
+			if(result[i].authSq == 1){
+				html += '<div class="artist"><span>Artist</span></div>';
+			}
+			
+			html += '</div>';
+			html += '</div>';
+			html += '</div>';
+
+		}
 
 		}
 	
