나의 작품/ 수장품 Modal Alert 제거

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -121,6 +121,8 @@ jQuery(document).ready(function() {
 
 function collectionRegMove() {
 	
+	location.href = "/collection_reg";
+	/*
 	modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. 등록하시겠습니까?", 
 	
 	function(confirm){
@@ -128,7 +130,7 @@ function collectionRegMove() {
 				location.href = "/collection_reg";					
 		}
 	});
-
+	*/
 }
 
 function myCollectionList(){
