--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -110,6 +110,9 @@ $(function() {
 
 function myWorkRegMove() {
 	
+	location.href = "/myWork_reg";
+	
+	/*
 	modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. 등록하시겠습니까?", 
 	
 	function(confirm){
@@ -117,6 +120,7 @@ function myWorkRegMove() {
 				location.href = "/myWork_reg";					
 		}
 	});
+	*/
 
 }
 function myWorkList(){
